// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiDualRange allows value prop to accept empty strings 1`] = `
<div
  class="euiDateRangeWrapper euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiDateRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiDateRangeSlider euiDateRangeSlider--hasRange euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
</div>
`;

exports[`EuiDualRange allows value prop to accept numbers 1`] = `
<div
  class="euiDateRangeWrapper euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiDateRangeTrack"
  >
    <div
      class="euiDateRangeHighlight"
    >
      <div
        class="euiDateRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
    <input
      aria-hidden="true"
      class="euiDateRangeSlider euiDateRangeSlider--hasRange euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
</div>
`;

exports[`EuiDualRange input props can be applied to min and max inputs 1`] = `
<div
  class="euiDateRangeWrapper euiDualRange"
>
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="Min value"
        class="euiFieldNumber euiDateRangeInput euiDateRangeInput--min"
        max="8"
        min="1"
        name="name-minValue"
        step="1"
        style="width:3.6em"
        type="number"
        value="1"
      />
    </div>
  </div>
  <div
    class="euiDateRange__horizontalSpacer"
  />
  <div
    aria-hidden="true"
    class="euiDateRangeTrack"
  >
    <div
      class="euiDateRangeHighlight"
    >
      <div
        class="euiDateRangeHighlight__progress"
        style="margin-left:0%;width:77.77777777777779%"
      />
    </div>
    <input
      aria-hidden="true"
      class="euiDateRangeSlider euiDateRangeSlider--hasRange euiDualRange__slider"
      id="id"
      max="10"
      min="1"
      name="name"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
  <div
    class="euiDateRange__horizontalSpacer"
  />
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="Max value"
        class="euiFieldNumber euiDateRangeInput euiDateRangeInput--max"
        max="10"
        min="1"
        name="name-maxValue"
        step="1"
        style="width:3.6em"
        type="number"
        value="8"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange is rendered 1`] = `
<div
  class="euiDateRangeWrapper euiDualRange testClass1 testClass2"
>
  <div
    aria-hidden="false"
    class="euiDateRangeTrack"
  >
    <div
      class="euiDateRangeHighlight"
    >
      <div
        class="euiDateRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
    <input
      aria-hidden="true"
      aria-label="aria-label"
      class="euiDateRangeSlider euiDateRangeSlider--hasRange euiDualRange__slider"
      data-test-subj="test subject string"
      id="id"
      max="100"
      min="0"
      name="name"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
</div>
`;

exports[`EuiDualRange props compressed should render 1`] = `
<div
  class="euiDateRangeWrapper euiDateRangeWrapper--compressed euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiDateRangeTrack"
  >
    <div
      class="euiDateRangeHighlight euiDateRangeHighlight--compressed"
    >
      <div
        class="euiDateRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
    <input
      aria-hidden="true"
      class="euiDateRangeSlider euiDateRangeSlider--hasRange euiDateRangeSlider--compressed euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
</div>
`;

exports[`EuiDualRange props custom ticks should render 1`] = `
<div
  class="euiDateRangeWrapper euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiDateRangeTrack"
    style="margin-right:0.6em"
  >
    <div
      class="euiDateRangeTicks"
    >
      <button
        class="euiDateRangeTick euiDateRangeTick--isCustom"
        style="left:20%"
        tabindex="-1"
        title="20kb"
        type="button"
        value="20"
      >
        20kb
      </button>
      <button
        class="euiDateRangeTick euiDateRangeTick--isCustom"
        style="left:100%"
        tabindex="-1"
        title="100kb"
        type="button"
        value="100"
      >
        100kb
      </button>
    </div>
    <div
      class="euiDateRangeHighlight euiDateRangeHighlight--hasTicks"
    >
      <div
        class="euiDateRangeHighlight__progress"
        style="margin-left:20%;width:80%"
      />
    </div>
    <input
      aria-hidden="true"
      class="euiDateRangeSlider euiDateRangeSlider--hasTicks euiDateRangeSlider--hasRange euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
</div>
`;

exports[`EuiDualRange props disabled should render 1`] = `
<div
  class="euiDateRangeWrapper euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiDateRangeTrack euiDateRangeTrack--disabled"
  >
    <div
      class="euiDateRangeHighlight"
    >
      <div
        class="euiDateRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
    <input
      aria-hidden="true"
      class="euiDateRangeSlider euiDateRangeSlider--hasRange euiDualRange__slider"
      disabled=""
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
</div>
`;

exports[`EuiDualRange props fullWidth should render 1`] = `
<div
  class="euiDateRangeWrapper euiDateRangeWrapper--fullWidth euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiDateRangeTrack"
  >
    <div
      class="euiDateRangeHighlight"
    >
      <div
        class="euiDateRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
    <input
      aria-hidden="true"
      class="euiDateRangeSlider euiDateRangeSlider--hasRange euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
</div>
`;

exports[`EuiDualRange props inputs should render 1`] = `
<div
  class="euiDateRangeWrapper euiDualRange testClass1 testClass2"
>
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="aria-label"
        class="euiFieldNumber euiDateRangeInput euiDateRangeInput--min"
        max="8"
        min="0"
        name="name-minValue"
        step="1"
        style="width:4.4em"
        type="number"
        value="1"
      />
    </div>
  </div>
  <div
    class="euiDateRange__horizontalSpacer"
  />
  <div
    aria-hidden="true"
    class="euiDateRangeTrack"
  >
    <div
      class="euiDateRangeHighlight"
    >
      <div
        class="euiDateRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
    <input
      aria-hidden="true"
      aria-label="aria-label"
      class="euiDateRangeSlider euiDateRangeSlider--hasRange euiDualRange__slider"
      data-test-subj="test subject string"
      id="id"
      max="100"
      min="0"
      name="name"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
  <div
    class="euiDateRange__horizontalSpacer"
  />
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="aria-label"
        class="euiFieldNumber euiDateRangeInput euiDateRangeInput--max"
        max="100"
        min="1"
        name="name-maxValue"
        step="1"
        style="width:4.4em"
        type="number"
        value="8"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props labels should render 1`] = `
<div
  class="euiDateRangeWrapper euiDualRange"
>
  <label
    class="euiDateRangeLabel euiDateRangeLabel--min"
  >
    0
  </label>
  <div
    aria-hidden="false"
    class="euiDateRangeTrack"
  >
    <div
      class="euiDateRangeHighlight"
    >
      <div
        class="euiDateRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
    <input
      aria-hidden="true"
      class="euiDateRangeSlider euiDateRangeSlider--hasRange euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
  <label
    class="euiDateRangeLabel euiDateRangeLabel--max"
  >
    100
  </label>
</div>
`;

exports[`EuiDualRange props levels should render 1`] = `
<div
  class="euiDateRangeWrapper euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiDateRangeTrack"
  >
    <div
      class="euiDateRangeLevels"
    >
      <span
        class="euiDateRangeLevel euiDateRangeLevel--danger"
        style="width:20%"
      />
      <span
        class="euiDateRangeLevel euiDateRangeLevel--success"
        style="width:80%"
      />
    </div>
    <div
      class="euiDateRangeHighlight"
    >
      <div
        class="euiDateRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
    <input
      aria-hidden="true"
      class="euiDateRangeSlider euiDateRangeSlider--hasRange euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
</div>
`;

exports[`EuiDualRange props range should render 1`] = `
<div
  class="euiDateRangeWrapper euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiDateRangeTrack"
  >
    <div
      class="euiDateRangeHighlight"
    >
      <div
        class="euiDateRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
    <input
      aria-hidden="true"
      class="euiDateRangeSlider euiDateRangeSlider--hasRange euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
</div>
`;

exports[`EuiDualRange props slider should display in popover 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiDateRange__popover"
>
  <div
    class="euiPopover__anchor"
  >
    <div>
      <div
        class="euiFormControlLayout euiFormControlLayoutDelimited"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-label="aria-label"
            class="euiFieldNumber euiFormControlLayoutDelimited__input"
            max="8"
            min="0"
            name="name-minValue"
            step="1"
            type="number"
            value="1"
          />
          <div
            class="euiText euiText--small euiFormControlLayoutDelimited__delimeter"
          >
            <div
              class="euiTextColor euiTextColor--subdued"
            >
              →
            </div>
          </div>
          <input
            aria-label="aria-label"
            class="euiFieldNumber euiFormControlLayoutDelimited__input"
            max="100"
            min="1"
            name="name-maxValue"
            step="1"
            type="number"
            value="8"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props ticks should render 1`] = `
<div
  class="euiDateRangeWrapper euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiDateRangeTrack"
    style="margin-right:0.6em"
  >
    <div
      class="euiDateRangeTicks"
      style="margin:0 -8.333333333333332%;left:0;right:0"
    >
      <button
        class="euiDateRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="0"
      >
        0
      </button>
      <button
        class="euiDateRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="20"
      >
        20
      </button>
      <button
        class="euiDateRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="40"
      >
        40
      </button>
      <button
        class="euiDateRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="60"
      >
        60
      </button>
      <button
        class="euiDateRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="80"
      >
        80
      </button>
      <button
        class="euiDateRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="100"
      >
        100
      </button>
    </div>
    <div
      class="euiDateRangeHighlight euiDateRangeHighlight--hasTicks"
    >
      <div
        class="euiDateRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
    <input
      aria-hidden="true"
      class="euiDateRangeSlider euiDateRangeSlider--hasTicks euiDateRangeSlider--hasRange euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
</div>
`;
